# Train-Detectron2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
doc/: Example.md
examples/: example_use.py
output/: metrics.json
src/: example_use.py  finetune_detectron.py  loading_dataset_example.py
src/finetune_detectron2/: __init__.py  finetune_detectron.py
tests/: test_finetune_detectron.py
